--- a/Reminders Webpage.html
+++ b/Reminders Webpage.html
@@ -29,9 +29,6 @@
                 </ul>
             </div>
         </section>
-        
-
-
-        <script src="javascript.js"></script>
+              <script src="Javascript.js"></script>
     </body>
 </html>
